final pass (mohammad+frederic+arthur) done. One last thing remains, scaling with large number of processes and for a heavier load

--- a/paper/tex/draft.tex
+++ b/paper/tex/draft.tex
@@ -21,6 +21,7 @@
 \usepackage{url}
 \usepackage{tikz}
 \usepackage{diagbox}
+\usepackage{kpfonts}
 
 \DeclareSymbolFont{extraup}{U}{zavm}{m}{n}
 \DeclareMathSymbol{\varheart}{\mathalpha}{extraup}{86}
