--- a/paper/tex/applications.tex
+++ b/paper/tex/applications.tex
@@ -1,9 +1,9 @@
 %!TEX root = draft.tex
-\section{Application to the Stefan Problem} \label{sec:application}
+\section{Application to the Stefan problem} \label{sec:application}
 
 \subsection{Presentation of the problem}
 
-In this section we apply our approach to the study of the phase transition of a liquid melt to a solid crystaline structure. In the case of a single component melt, and in the absence of convection, the process is dominated by diffusion and can be modeled as a Stefan problem. We decompose the computational domain $\Omega$ into \mohammad{How about: Consider a computational domain $\Omega$ decomposed into ...} \comment{this would be the exact phrasing of another article} two subdomains $\Omega_l$ and $\Omega_s$, separated by an interface $\Gamma$. The Stefan problem describes the evolution of the temperature $T$, decomposed into $T_s$ in the solid phase $\Omega_s$ and $T_l$ in the liquid phase $\Omega_l$, as
+In this section we apply our approach to the study of the phase transition of a liquid melt to a solid crystaline structure. In the case of a single component melt, and in the absence of convection, the process is dominated by diffusion and can be modeled as a Stefan problem. We decompose the computational domain $\Omega$ into two subdomains $\Omega_l$ and $\Omega_s$, separated by an interface $\Gamma$. The Stefan problem describes the evolution of the temperature $T$, decomposed into $T_s$ in the solid phase $\Omega_s$ and $T_l$ in the liquid phase $\Omega_l$, as
 \begin{align}
 \pd{T_l}{t} & = D_l \Delta T_l \quad \mathrm{in} ~~ \Omega_l, \label{eq:stefan_heat_equation_l} \\
 \pd{T_s}{t} & = D_s \Delta T_s \quad \mathrm{in} ~~ \Omega_s. \label{eq:stefan_heat_equation_s}
@@ -24,18 +24,17 @@ where $\Delta x_{min}$ is the size of the smallest cell of the forest. The gener
 
 \begin{algorithm}[htbp]
 \caption{$\texttt{General procedure for solving the Stefan problem}$}
-\mohammad{Is there a reason all of the algorithm is in type-writer font? Usually its reserved for code segments, etc.}
 \begin{algorithmic}[1]
-\State $\texttt{Initialize the forest and }\phi\texttt{ given the initial geometry}.$
-\State $\texttt{Initialize }T_s\texttt{ in }\Omega^+\texttt{ and }T_l\texttt{ in }\Omega^-.$
-\State $\texttt{Reinitialize }\phi\texttt{ and compute the local interface curvature }\kappa.$
-\State $\texttt{Compute }T^{n+1}_l\texttt{ and }T^{n+1}_s\texttt{ by solving the heat equations \eqref{eq:stefan_heat_equation_l} and \eqref{eq:stefan_heat_equation_s}}.$
-\State $\texttt{Extrapolate }T^{n+1}_s\texttt{ from }\Omega^+\texttt{ to }\Omega^-\texttt{ and }T^{n+1}_l\texttt{ from }\Omega^-\texttt{ to }\Omega^+.$
-\State $\texttt{Compute the velocity field }\mathbf{V}\texttt{ according to \eqref{eq:stefan_velocity}}.$
-\State $\texttt{Compute the time step dt following \eqref{eq:stefan_dt}.}$
-\State $\texttt{Evolve the interface and contruct the new forest using the Semi-Lagrangian procedure}.$
-\State $\texttt{Interpolate }T^{n+1}_s\texttt{ and }T^{n+1}_l\texttt{ from the old forest to the new forest}.$
-\State $\texttt{Go to 3 with n=n+1}.$
+\State Initialize the forest and $\phi$ given the initial geometry.
+\State Initialize $T_s$ in $\Omega^+$ and $T_l$ in $\Omega^-$.
+\State Reinitialize $\phi$ and compute the local interface curvature $\kappa$.
+\State Compute $T^{n+1}_l$ and $T^{n+1}_s$ by solving the heat equations \eqref{eq:stefan_heat_equation_l} and \eqref{eq:stefan_heat_equation_s}.
+\State Extrapolate $T^{n+1}_s$ from $\Omega^+$ to $\Omega^-$ and $T^{n+1}_l$ from $\Omega^-$ to $\Omega^+$.
+\State Compute the velocity field $\underline{\mathbf{V}}$ according to \eqref{eq:stefan_velocity}.
+\State Compute the time step dt following \eqref{eq:stefan_dt}.
+\State Evolve the interface and construct the new forest using the Semi-Lagrangian procedure.
+\State Interpolate $T^{n+1}_s$ and $T^{n+1}_l$ from the old forest to the new forest.
+\State Go to 3 with n=n+1.
 \end{algorithmic}
 \label{alg:stefan}
 \end{algorithm}
@@ -63,7 +62,7 @@ The implementation of the Stefan problem relies on the components described in t
 	                            & $e$ & $100\%$ & $98\%$  & $94\%$  & $89\%$  & $73\%$ & $61\%$ \\
 	\hline
 	\end{tabular}
-	\caption{Parallel efficiency of the total runtime for the Stefan test based on the lowest number of processes for each test. \comment{frederic, what do you think about this table ?}}
+	\caption{Parallel efficiency of the total runtime for the Stefan test based on the lowest number of processes for each test.}
 	\label{tab:scaling_stefan} 
 \end{table}
 
@@ -80,7 +79,7 @@ with $\theta_1$ the angle between the normal to the interface $\underline{\mathb
 \end{align*}
 are used to enforce a variety of crystal shapes. The computation is initialized with twenty spherical seeds of radius $1.5 \cdot 10^{-3}$ placed randomly in the domain. We take the diffusion coefficients $D_s=D_l=1$ and set the initial temperatures $T^0_l=-0.25$ and $T^0_s=0$.
 
-The simulation was ran on $256$ MPI processes for $6$ hours and $30$ minutes, resulting in $396$ time iterations. Visualizations of the final iteration are presented in figures \ref{fig:stefan_grid}, \ref{fig:stefan_crystals} and \ref{fig:stefan_evolution}. The final iteration of the simulation consisted of $167$M grid points whereas a uniform grid with the equivalent finest resolution would lead to $8.59\cdot10^{12}$ grid points, i.e. over eight trillion grid points. Our simulation used only $0.002\%$ of the number of grid points needed for the same simulation on a uniform grid. This application demonstrates the ability of our approach to resolve small scale details, while accounting for long range interactions.
+The simulation was ran on $256$ MPI processes for $6$ hours and $30$ minutes, resulting in $396$ time iterations. Visualizations of the final iteration are presented in figures \ref{fig:stefan_grid} and \ref{fig:stefan_evolution}. The final iteration of the simulation consisted of $167$M grid points whereas a uniform grid with the equivalent finest resolution would lead to $8.59\cdot10^{12}$ grid points, i.e. over eight trillion grid points. Our simulation used only $0.002\%$ of the number of grid points needed for the same simulation on a uniform grid. This application demonstrates the ability of our approach to resolve small scale details, while accounting for long range interactions.
 
 \begin{figure}[ht!]
 \begin{center}
@@ -92,18 +91,26 @@ The simulation was ran on $256$ MPI processes for $6$ hours and $30$ minutes, re
 \end{center}
 \end{figure}
 
-\begin{figure}[ht!]
-\begin{center}
-\subfigure[]{\includegraphics[width=0.45\textwidth]{figures/stefan_crystal_1.png}}
-\subfigure[]{\includegraphics[width=0.45\textwidth]{figures/stefan_crystal_2.png}}
-\subfigure[]{\includegraphics[width=0.45\textwidth]{figures/stefan_crystal_4.png}}
-\subfigure[]{\includegraphics[width=0.45\textwidth]{figures/stefan_crystal_3.png}}
-\caption{Representation of the computational domain (a) as well as various developped crystal structures obtained from solving the Stefan problem simulation (b,c,d).} \label{fig:stefan_crystals}
-\end{center}
-\end{figure}
+%\begin{figure}[ht!]
+%\begin{center}
+%\subfigure[]{\includegraphics[width=0.45\textwidth]{figures/stefan_crystal_1.png}}
+%\subfigure[]{\includegraphics[width=0.45\textwidth]{figures/stefan_crystal_2.png}}
+%\subfigure[]{\includegraphics[width=0.45\textwidth]{figures/stefan_crystal_4.png}}
+%\subfigure[]{\includegraphics[width=0.45\textwidth]{figures/stefan_crystal_3.png}}
+%\caption{Representation of the computational domain (a) as well as various developped crystal structures obtained from solving the Stefan problem simulation (b,c,d).} \label{fig:stefan_crystals}
+%\end{center}
+%\end{figure}
 
 \begin{figure}[ht!]
 \begin{center}
+\begin{tabular}{c c c c c}
+(a) &
+\includegraphics[width=.2\textwidth]{stefan/nb2_iter19.png} &
+\includegraphics[width=.2\textwidth]{stefan/nb2_iter39.png} &
+\includegraphics[width=.2\textwidth]{stefan/nb2_iter59.png} &
+\includegraphics[width=.2\textwidth]{stefan/nb2_iter79.png}
+\end{tabular}
+
 \subfigure[]{
 \includegraphics[width=.2\textwidth]{stefan/nb2_iter19.png}
 \includegraphics[width=.2\textwidth]{stefan/nb2_iter39.png}
