--- a/paper/tex/draft.tex
+++ b/paper/tex/draft.tex
@@ -70,12 +70,12 @@
 
 \begin{document}
 
-\title{Parallel Level-set Methods on Adaptive Tree-Based Grids}
+\title{Parallel Level-Set Methods on Adaptive Tree-Based Grids}
 
 \cortext[cor]{Corresponding author: m.mirzadeh@engineering.ucsb.edu}
 \address[MECHE]{Department of Mechanical Engineering, University of California, Santa Barbara, CA 93106-5070, United States.}
 \address[CS]{Department of Computer Science, University of California, Santa Barbara, CA 93106-5110, United States.}
-\address[UBONN]{Institute for Numerical Simulation, University of Bonn, Bonn 53115, Germany.}
+\address[UBONN]{Institute for Numerical Simulation, University of Bonn, 53115 Bonn, Germany.}
 
 \author[MECHE]{Mohammad Mirzadeh\corref{cor}} \author[MECHE]{Arthur Guittet} \author[UBONN] {Carsten Burstedde} \author[MECHE,CS]{Frederic Gibou}
 
