--- a/paper/tex/levelset_method.tex
+++ b/paper/tex/levelset_method.tex
@@ -5,11 +5,11 @@ The level-set method, introduced in \cite{Osher;Sethian:88:Fronts-Propagating-w}
 \phi_t + \underline{\mbf{u}} \cdot \underline{\nabla} \phi = 0.
 \label{eq:ls}
 \ee
-When the velocity field does not depend on the level-set function itself, equation \eqref{eq:ls} can be solved using the semi-Lagrangian method. An important advantage of the semi-Lagrangian method over the regular finite difference method is its unconditional stability, which allows for arbitrarily large time steps. This is particularly important when using adaptive grids, as higher grid resolutions translate into unpractical smaller time steps.
+When the velocity field does not depend on the level-set function itself, equation \eqref{eq:ls} can be solved using the semi-Lagrangian method. An important advantage of the semi-Lagrangian method over the regular finite difference method is its unconditional stability that allows for arbitrarily large time steps. This is particularly important when using adaptive grids since higher grid resolutions translate into impractically small time steps.
 
-In general, an infinite number of level-set functions can describe the same zero contour and thus an interface. However, it is desirable to chose a function with the signed distance property, i.e.\ $|\underline{\nabla} \phi| = 1$. As detailed in section \ref{sec:introduction}, we solve the pseudo-time transient reinitialization equation \cite{Sussman;Smereka;Osher:94:A-Level-Set-Approach, Osher;Fedkiw:01:Level-Set-Methods:-A} to achieve this property,
+In general, an infinite number of level-set functions can describe the same zero contour and thus an interface. However, it is desirable to chose a function with the signed distance property $|\underline{\nabla} \phi| = 1$. As detailed in section \ref{sec:introduction}, we solve the pseudo-time transient reinitialization equation \cite{Sussman;Smereka;Osher:94:A-Level-Set-Approach, Osher;Fedkiw:01:Level-Set-Methods:-A} to achieve this property,
 \be
 \phi_\tau + S(\phi_0)\left(\lvert \underline{\nabla} \phi \rvert - 1\right) = 0,
 \label{eq:reinitialization}
 \ee
-where $\tau$ is a pseudo time step, $\phi_0$ is any level-set function that correctly describes the interface location and $S(\phi_0)$ is an appropriate approximation of the sign function. Here, we do not go into the details of the sequential algorithms for solving equations \eqref{eq:ls} and \eqref{eq:reinitialization}. Instead, we note that the algorithms presented in section \ref{sec:parallel algorithms} are based on the sequential methods presented in \cite{Min;Gibou:07:A-second-order-accur} and refer the interested reader to the aforementioned articles and references therein for more details.
+where $\tau$ is a pseudo time step, $\phi_0$ is any level-set function that correctly describes the interface location and $S(\phi_0)$ is an approximation of the sign function. Here, we do not go into the details of the sequential algorithms for solving equations \eqref{eq:ls} and \eqref{eq:reinitialization}. Instead, we note that the algorithms presented in section \ref{sec:parallel algorithms} are based on the sequential methods presented in \cite{Min;Gibou:07:A-second-order-accur} and refer the interested reader to the aforementioned articles and references therein for more details.
